<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation">
    <string name="accessibility_back">"Back"</string>
    <string name="accessibility_next">"Next"</string>
    <string name="accessibility_menu">"Menu"</string>
    <string name="accessibility_close">"Close"</string>
    <string name="accessibility_logo">"Corona-Warn-App"</string>
    <string name="accessibility_button">"Button"</string>
    <string name="menu_help">"Overview"</string>
    <string name="menu_information">"App Information"</string>
    <string name="menu_settings">"Settings"</string>
    <string name="general_notification_channel_title">"General"</string>
    <string name="general_notification_channel_description">"Reminders, notes, and general notifications – about your risk status, for example."</string>
    <string name="notification_headline">"Corona-Warn-App"</string>
    <string name="notification_body">"You have new messages from your Corona-Warn-App."</string>
    <string name="notification_headline_share_positive_result">"You can help!"</string>
    <string name="notification_body_share_positive_result">"Please share your test result and warn others."</string>
    <string name="notification_headline_test_result_ready">"Corona-Warn-App"</string>
    <string name="notification_body_test_result_ready">"You have new messages from your Corona-Warn-App."</string>
    <string name="update_dialog_title">"Update available"</string>
    <string name="update_dialog_message">"Please note, you can only use the Corona-Warn-App again once you have installed the latest update."</string>
    <string name="update_dialog_button">"Update"</string>
    <string name="risk_card_body_days_since_installation">"Installed %s days ago"</string>
    <string name="risk_card_body_installation_today">"Installed today"</string>
    <string name="risk_card_body_installation_yesterday">"Installed yesterday"</string>
    <string name="risk_card_body_saved_days">"Exposure logging was active for %1$s of the past 14 days"</string>
    <string name="risk_card_body_saved_days_full">"Exposure logging permanently active"</string>
    <string name="risk_card_body_not_yet_fetched">"Encounters have not yet been checked."</string>
    <string name="risk_card_body_time_fetched">"Updated: %1$s"</string>
    <string name="risk_card_body_open_daily">"Note: Please open the app daily to update your risk status."</string>
    <string name="risk_card_button_update">"Update"</string>
    <string name="risk_card_button_enable_tracing">"Activate Exposure Logging"</string>
    <string name="risk_card_body_tracing_off">"Activate exposure logging to evaluate your risk status today."</string>
    <string name="risk_card_low_risk_headline">"Low Risk"</string>
    <string name="risk_card_increased_risk_headline">"Increased Risk"</string>
    <string name="risk_card_unknown_risk_body">"Since you have not activated exposure logging for long enough, we could not calculate your risk of infection."</string>
    <string name="risk_card_no_calculation_possible_headline">"Exposure logging stopped"</string>
    <string name="risk_card_no_calculation_possible_body_saved_risk">"Last exposure check:"<xliff:g id="line_break">"\n"</xliff:g>"%1$s"</string>
    <string name="risk_card_outdated_risk_headline">"Exposure logging is not possible"</string>
    <string name="risk_card_outdated_risk_body">"Your exposure logging could not be updated for more than 24 hours."</string>
    <string name="risk_card_outdated_manual_risk_body">"Your risk status has not been updated for more than 48 hours. Please update your risk status."</string>
    <string name="risk_card_check_failed_no_internet_headline">"Exposure check failed"</string>
    <string name="risk_card_check_failed_no_internet_body">"The synchronization of random IDs with the server failed. You can restart the synchronization manually."</string>
    <string name="risk_card_check_failed_no_internet_restart_button">"Restart"</string>
    <string name="risk_card_low_risk_no_encounters_body">"No exposures"</string>
    <plurals name="risk_card_low_risk_encounter_days_body">
        <item quantity="one">"Exposures with low risk on %1$d day"</item>
        <item quantity="other">"Exposures with low risk on %1$d days"</item>
        <item quantity="zero">"Exposures with low risk on %1$d days"</item>
        <item quantity="two">"Exposures with low risk on %1$d days"</item>
        <item quantity="few">"Exposures with low risk on %1$d days"</item>
        <item quantity="many">"Exposures with low risk on %1$d days"</item>
    </plurals>
    <plurals name="risk_card_low_risk_encounter_days_body_description">
        <item quantity="one">"Exposures with low risk on one day"</item>
        <item quantity="other">"Exposures with low risk on %1$d days"</item>
        <item quantity="zero">"Exposures with low risk on %1$d days"</item>
        <item quantity="two">"Exposures with low risk on %1$d days"</item>
        <item quantity="few">"Exposures with low risk on %1$d days"</item>
        <item quantity="many">"Exposures with low risk on %1$d days"</item>
    </plurals>
    <string name="risk_card_low_risk_most_recent_body_encounter_on_single_day">"On %1$s"</string>
    <string name="risk_card_low_risk_most_recent_body_encounters_on_more_than_one_day">"Most recently on %1$s"</string>
    <string name="main_overview_title">"Overview"</string>
    <string name="main_overview_accessibility_title">"Overview"</string>
    <string name="main_overview_subtitle_tracing">"Exposure Logging"</string>
    <string name="main_overview_body_tracing">"Exposure logging is one of the three central features of the app. When you activate it, encounters with people’s smartphones are logged automatically."</string>
    <string name="main_overview_subtitle_risk">"Risk of Infection"</string>
    <string name="main_overview_body_risk">"When exposure logging is active, the app calculates your personal risk of infection. It does this by measuring duration and proximity of your exposure to people who have been diagnosed with coronavirus over the last 14 days."</string>
    <string name="main_overview_subtitle_risk_levels">"The following risk status can be shown:"</string>
    <string name="main_overview_subtitle_increased_risk">"Increased Risk"</string>
    <string name="main_overview_subtitle_low_risk">"Low Risk"</string>
    <string name="main_overview_headline_test">"Notifying Other Users"</string>
    <string name="main_overview_body_test">"You can register your test and retrieve your test result in the app. If you are diagnosed with coronavirus, you can notify others and break the chain of infection."</string>
    <string name="main_overview_headline_glossary">"Definition of Terms:"</string>
    <string name="main_overview_subtitle_glossary_tracing">"Exposure Log"</string>
    <string name="main_overview_body_glossary_tracing">"List of received and temporary random IDs saved temporarily in the operating system storage. This list is read when the exposures are checked. All random IDs are automatically deleted after 14 days."</string>
    <string name="main_overview_subtitle_glossary_calculation">"Exposure Check"</string>
    <string name="main_overview_body_glossary_calculation">"Exposure log data is retrieved and synchronized with risk notifications from other users. Your risk is checked automatically several times per day."</string>
    <string name="main_overview_subtitle_glossary_contact">"Exposure Risk"</string>
    <string name="main_overview_body_glossary_contact">"Exposure to an infected person who has shared their positive test results with others through the app. An exposure must meet certain criteria with regard to duration, distance, and suspected infectiousness of the other person to be classified as a high-risk exposure."</string>
    <string name="main_overview_subtitle_glossary_notification">"Exposure Notification"</string>
    <string name="main_overview_body_glossary_notification">"The display of exposures in the Corona-Warn-App."</string>
    <string name="main_overview_subtitle_glossary_keys">"Random ID"</string>
    <string name="main_overview_body_glossary_keys">"Random IDs are combinations of digits and letters generated randomly. They are exchanged between devices in close proximity. Random IDs cannot be traced to a specific person and are automatically deleted after 14 days. Persons diagnosed with coronavirus can opt to share their random IDs of up to the last 14 days with other app users."</string>
    <string name="main_overview_illustration_description">"A smartphone displays various content, numbered 1 to 3."</string>
    <string name="onboarding_button_next">"Next"</string>
    <string name="onboarding_test_accessibility_title">"Onboarding page 5 of 6: If You Are Diagnosed with Coronavirus"</string>
    <string name="onboarding_test_headline">"If you are diagnosed with coronavirus"</string>
    <string name="onboarding_test_subtitle">"If you receive a positive test result, please report this in the app. Sharing your test results is voluntary and secure. Please do this for the sake of everyone’s health."</string>
    <string name="onboarding_test_body">"Your notification is encrypted securely and processed on a secure server. People whose encrypted random IDs your smartphone has collected will now receive a warning along with information about what they should now do."</string>
    <string name="onboarding_test_illustration_description">"An encrypted positive test diagnosis is transmitted to the system, which will now warn other users."</string>
    <string name="onboarding_notifications_accessibility_title">"Onboarding page 6 of 6: Receive warnings and identify risks"</string>
    <string name="onboarding_notifications_headline">"Receive warnings and identify risks"</string>
    <string name="onboarding_notifications_subtitle">"The app can notify you automatically about your risk status and warn you about new infections of people you have been exposed to. Allow the app now to notify you."</string>
    <string name="onboarding_notifications_body">"You can then self-isolate to protect others and find out where you can get tested."</string>
    <string name="onboarding_notifications_illustration_description">"A woman receives a notification from her Corona-Warn-App."</string>
    <string name="settings_title">"Settings"</string>
    <string name="settings_tracing_title">"Exposure Logging"</string>
    <string name="settings_tracing_body_description">"Allow creation and sharing of COVID-19 random IDs."</string>
    <string name="settings_notifications_title">"Notifications"</string>
    <string name="settings_notifications_body_description">"Allow automatic notifications of your COVID-19 risk status."</string>
    <string name="settings_reset_body_description">"Delete all your data in the app."</string>
    <string name="settings_reset_button_positive">"Reset App"</string>
    <string name="settings_background_priority_title">"Prioritized Background Activity"</string>
    <string name="settings_background_priority_body_description">"Allow automatic risk status updates"</string>
    <string name="settings_privacy_preserving_analytics_body_description">"Allow the transmission of your usage behavior."</string>
    <string name="settings_privacy_preserving_analytics_title">"Share Data"</string>
    <string name="button_share">"Share"</string>
    <string name="bottom_nav_home_title">"Start Screen"</string>
    <string name="bottom_nav_diary_title">"Journal"</string>
    <string name="bottom_nav_check_ins_title">"Check In"</string>
    <string name="bottom_nav_certificates_title">"Certificates"</string>
</resources>