<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <item
        android:id="@+id/mainSharingFragment"
        android:contentDescription="@string/button_share"
        android:icon="@drawable/ic_main_share"
        android:title="@string/button_share"
        android:orderInCategory="1"
        app:showAsAction="always" />

    <item
        android:id="@+id/mainOverviewFragment"
        android:title="@string/menu_help" />
    <item
        android:id="@+id/informationFragment"
        android:title="@string/menu_information" />
    <item
        android:id="@+id/settingsFragment"
        android:title="@string/menu_settings" />
    <item
        android:id="@+id/test_nav_graph"
        android:title="Test Menu"
        android:visible="false"
        tools:ignore="HardcodedText" />
</menu>
