<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSurface"
    android:contentDescription="@string/settings_title"
    android:focusable="true">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/CWAMaterialToolbar.Close"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/settings_title" />

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:paddingBottom="@dimen/margin_24"
        android:scrollbarStyle="outsideOverlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.rki.coronawarnapp.ui.view.SettingsRowView
                android:id="@+id/settings_tracing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_24"
                android:title="@string/settings_tracing_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:settingsBody="@string/settings_tracing_body_description" />

            <de.rki.coronawarnapp.ui.view.SettingsRowView
                android:id="@+id/settings_notifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:title="@string/settings_notifications_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/settings_tracing"
                app:settingsBody="@string/settings_notifications_body_description" />

            <de.rki.coronawarnapp.ui.view.SettingsRowView
                android:id="@+id/settings_background_priority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:title="@string/settings_background_priority_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/settings_notifications"
                app:settingsBody="@string/settings_background_priority_body_description" />

            <de.rki.coronawarnapp.ui.view.SettingsRowView
                android:id="@+id/settings_privacy_preserving_analytics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:title="@string/settings_privacy_preserving_analytics_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/settings_background_priority"
                app:settingsBody="@string/settings_privacy_preserving_analytics_body_description" />

            <de.rki.coronawarnapp.ui.view.SettingsRowView
                android:id="@+id/settings_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:subtitle="@string/settings_reset_body_description"
                android:textColor="@color/colorTextSemanticRed"
                android:title="@string/settings_reset_button_positive"
                app:layout_constraintTop_toBottomOf="@id/settings_privacy_preserving_analytics" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
