<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_overview_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSurface"
    android:contentDescription="@string/main_overview_accessibility_title">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/CWAMaterialToolbar.Close"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/main_overview_title" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.rki.coronawarnapp.ui.view.InformationDetailsView
                android:id="@+id/main_overview_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/main_overview_illustration_description"
                android:src="@drawable/ic_main_illustration_overview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.rki.coronawarnapp.ui.view.MainOverviewSegmentView
                android:id="@+id/main_overview_tracing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_24"
                android:icon="@drawable/ic_main_overview_1"
                android:subtitle="@string/main_overview_body_tracing"
                android:title="@string/main_overview_subtitle_tracing"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_overview_details" />

            <de.rki.coronawarnapp.ui.view.MainOverviewSegmentView
                android:id="@+id/main_overview_risk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_24"
                android:icon="@drawable/ic_main_overview_2"
                android:subtitle="@string/main_overview_body_risk"
                android:title="@string/main_overview_subtitle_risk"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_overview_tracing" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/main_overview_risk_subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_24"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_overview_risk">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/main_overview_risk_headline"
                    style="@style/row"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/padding_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        style="@style/headline6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_48"
                        android:accessibilityHeading="true"
                        android:text="@string/main_overview_subtitle_risk_levels"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <de.rki.coronawarnapp.ui.view.MainOverviewRowView
                    android:id="@+id/main_overview_risk_increased_risk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/ic_main_overview_circle"
                    android:iconTint="@color/colorSemanticHighRisk"
                    android:subtitle="@string/main_overview_subtitle_increased_risk"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/main_overview_risk_headline" />

                <de.rki.coronawarnapp.ui.view.MainOverviewRowView
                    android:id="@+id/main_overview_risk_low_risk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/ic_main_overview_circle"
                    android:iconTint="@color/colorSemanticLowRisk"
                    android:subtitle="@string/main_overview_subtitle_low_risk"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/main_overview_risk_increased_risk" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <de.rki.coronawarnapp.ui.view.MainOverviewSegmentView
                android:id="@+id/main_overview_test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_24"
                android:icon="@drawable/ic_main_overview_3"
                android:subtitle="@string/main_overview_body_test"
                android:title="@string/main_overview_headline_test"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_overview_risk_subtitle" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:background="@color/colorSurface2"
                app:layout_constraintTop_toBottomOf="@+id/main_overview_test">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/main_overview_glossary_headline"
                    style="@style/row"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/padding_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        style="@style/headline5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_48"
                        android:accessibilityHeading="true"
                        android:text="@string/main_overview_headline_glossary"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <de.rki.coronawarnapp.ui.view.OverviewGlossaryView
                    android:id="@+id/main_overview_glossary_tracing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:subtitle="@string/main_overview_body_glossary_tracing"
                    android:title="@string/main_overview_subtitle_glossary_tracing"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/main_overview_glossary_headline" />

                <de.rki.coronawarnapp.ui.view.OverviewGlossaryView
                    android:id="@+id/main_overview_glossary_calculation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:subtitle="@string/main_overview_body_glossary_calculation"
                    android:title="@string/main_overview_subtitle_glossary_calculation"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/main_overview_glossary_tracing" />

                <de.rki.coronawarnapp.ui.view.OverviewGlossaryView
                    android:id="@+id/main_overview_glossary_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:subtitle="@string/main_overview_body_glossary_contact"
                    android:title="@string/main_overview_subtitle_glossary_contact"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/main_overview_glossary_calculation" />

                <de.rki.coronawarnapp.ui.view.OverviewGlossaryView
                    android:id="@+id/main_overview_glossary_notification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:subtitle="@string/main_overview_body_glossary_notification"
                    android:title="@string/main_overview_subtitle_glossary_notification"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/main_overview_glossary_contact" />

                <de.rki.coronawarnapp.ui.view.OverviewGlossaryView
                    android:id="@+id/main_overview_glossary_keys"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:subtitle="@string/main_overview_body_glossary_keys"
                    android:title="@string/main_overview_subtitle_glossary_keys"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/main_overview_glossary_notification" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_end="@dimen/guideline_16" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
